2010-09-30  Jakub Jelinek  <jakub@redhat.com>

	PR target/45843
	* config/i386/i386.c (ix86_gimplify_va_arg): Use
	INTVAL (XEXP (slot, 1)) as prev_size.

2010-09-30  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/45837
	* config/rs6000/aix.h (TARGET_AIX_OS): Define to be 1.
	* config/rs6000/rs6000.h (TARGET_AIX_OS): Define to be 0 if not
	defined.
	* config/rs6000/option-defaults.h (toplevel): Change #if
	TARGET_AIX to TARGET_AIX_OS to allow compiler to build after
	global option changes.

2010-09-30  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (mem_loc_descriptor): Handle IF_THEN_ELSE.

	PR tree-optimization/31261
	* fold-const.c (fold_binary): Optimize ((A & N) + B) & M
	for constants M and N, M == (1LL << cst) - 1 && (N & M) == M.

2010-09-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	PR bootstrap/45796
	* Makefile.in (build/gen%$(build_exeext)): Move rule after all
	special-casing for generators and turn into ...
	((genprog:%=build/gen%$(build_exeext))): ... this static pattern
	rule, for better error messages in case of toplevel dependency
	errors.
	(genprog): Add hooks, rename to ...
	(genprogerr): ... this, and let genprog also contain check,
	checksum, condmd.
	((genprog:%=build/gen%$(build_exeext))): Rename to ...
	((genprogerr:%=build/gen%$(build_exeext))): ... this.
	(build/genhooks$(build_exeext)): Remove now-unneeded dependency.

2010-09-30  Jonathan Wakely  <jwakely.gcc@gmail.com>
            Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/install.texi: Suggest using LD_LIBRARY_PATH to find libs
	for GMP, MPFR and MPC.

2010-09-30  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sparc/sparc.opt (mimpure-text): Move ...
	* config/sol2.opt: ... here.
	Correct description.
	* config.gcc (*-*-solaris2*): Add sol2.opt to extra_options.
	* doc/invoke.texi (Option Summary, SPARC Options): Move
	-mimpure-text, -mno-impure-text, -threads, -pthreads, -pthread ...
	(Option Summary, Solaris 2 Options): ... here.